[project]
name = "dakota-docs"
version = "6.23.0"
description = "A Multilevel Parallel Object-Oriented Framework for Design Optimization, Parameter Estimation, Uncertainty Quantification, and Sensitivity Analysis"
authors = []
requires-python = ">=3.12,<4.0.0"
dependencies = [
    "sphinx (>=8.2.0,<9.0.0)",
    "myst-parser (>=5.0.0,<6.0.0)",
    "sphinx-rtd-theme (>=3.1.0,<4.0.0)",
    "sphinxcontrib-bibtex (>=2.6.5,<3.0.0)",
    "sphinx-copybutton (>=0.5.2,<0.6.0)",
    "autodoc-pydantic (>=2.2.0,<3.0.0)",
    "numpy (>=2.4.4,<3.0.0)",
    "pydantic (>=2.13.3,<3.0.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry]
package-mode = false
