## Process this file with automake to produce 'Makefile.in'.

## We need to descend into subdirectories intro and blackbox (other
## targets are handled here via dist_ and EXTRA_DIST
SUBDIRS = methods script_interfaces tutorial

## This file should be removed on 'make maintainer-clean'.
MAINTAINERCLEANFILES = Makefile.in

## These files should be distributed.
EXTRA_DIST = README \
	     platforms/INSTALL.aix \
	     platforms/INSTALL.asc_red \
	     platforms/INSTALL.cygwin \
	     platforms/INSTALL.irix64 \
	     platforms/INSTALL.linux \
	     platforms/INSTALL.linux64 \
	     platforms/INSTALL.mingw \
	     platforms/INSTALL.osf \
	     platforms/INSTALL.osx \
	     platforms/INSTALL.solaris \
	     platforms/INSTALL.ubuntu \
	     platforms/README
